--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<div class="container">	
 			<div class="jl-whole">
-				<div class="jl-head">									
+				<div class="jl-head jl-rotate">									
 					<div class="jl-petal jl-petal-1" ></div>
 					<div class="jl-petal jl-petal-2" ></div>	
 					<div class="jl-petal jl-petal-3" ></div>	
