--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		
 		<div class="container">	
 			<div class="jl-whole">
+				<div class="jl-face">
+					<div class="jl-left-eye" ></div>
+					<div class="jl-mouth" ></div>
+					<div class="jl-right-eye" ></div>			
+				</div>			
 				<div class="jl-head jl-rotate">									
 					<div class="jl-petal jl-petal-1" ></div>
 					<div class="jl-petal jl-petal-2" ></div>	
