--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<div class="jl-petal jl-petal-9" ></div>					
 				</div>	
 				<div class="jl-body">
-					<div class="jl-leave jl-leave-1" ></div>				
-					<div class="jl-leave jl-leave-2" ></div>				
+					<div class="jl-leave jl-leave-1 jl-move" ></div>				
+					<div class="jl-leave jl-leave-2 jl-move" ></div>				
 				</div>	
 			</div>			
 		</div>
